# amr_project

./: frames_2026-05-09_17.39.21.gv  frames_2026-05-10_15.16.05.gv  frames_2026-05-10_15.21.19.gv  frames_2026-05-17_16.39.53.gv  frames_2026-05-17_16.49.54.gv  frames_2026-05-22_11.34.49.gv  frames_2026-05-22_11.52.06.gv
src/: amr.config
src/Backup/Planners/: a_star_planner.cpp  a_star_planner.hpp  dijkstra_planner.cpp
src/amr_bringup/: package.xml
src/amr_bringup/launch/: simulated_robot.launch.py
src/amr_controller/: CMakeLists.txt  package.xml
src/amr_controller/amr_controller/: bumper_safety_stop.py  joy_to_twist.py  lidar_safety_stop.py  noisy_controller.py  safety_arbitrator.py  simple_controller.py  turbo_scaler.py  twist_relay.py  ultrasonic_safety_stop.py
src/amr_controller/config/: amr_controllers.yaml  joy_teleop.yaml  twist_mux_key.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/amr_controller/launch/: controller.launch.py  joystick_teleop.launch.py  teleop.launch.py
src/amr_controller/src/: bumper_retreat.cpp  bumper_safety_stop  bumper_safety_stop.cpp  joy_to_twist.cpp  lidar_safety_stop.cpp  noisy_controller.cpp  safety_arbitrator.cpp  simple_controller.cpp  turbo_scaler.cpp  twist_relay.cpp  ultrasonic_safety_stop.cpp  ultrasonic_sim_bridge.cpp
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/launch/: display.launch.py  gazebo.launch.py
src/amr_description/meshes/: Caster.STL  Front_Bumper.STL  IMU.STL  Left_Wheel.STL  Rear_Bumper.STL  Right_Wheel.STL  Ultrasonic.STL  Ultrasonic_1.STL  Ultrasonic_2.STL  Ultrasonic_3.STL  Ultrasonic_4.STL
src/amr_description/rviz/: display.rviz
src/amr_description/urdf/: amr.urdf.xacro  amr_gazebo.xacro  amr_ros2_control.xacro
src/amr_description/worlds/: office.sdf
src/amr_diagnostics/: CMakeLists.txt  package.xml
src/amr_ethernet_bridge/: CMakeLists.txt  package.xml
src/amr_ethernet_bridge/launch/: bridge.launch.py
src/amr_ethernet_bridge/src/: tcp_bridge_node.cpp
src/amr_hmi/: CMakeLists.txt  package.xml
src/amr_interfaces/: CMakeLists.txt  package.xml
src/amr_interfaces/msg/: DiagnosticStatus.msg  SystemStatus.msg  UltrasonicRaw.msg  UltrasonicZones.msg
src/amr_interfaces/srv/: SetComponentState.srv
src/amr_lidar/: CMakeLists.txt  package.xml
src/amr_lidar/launch/: lidar_launch.py
src/amr_localization/: CMakeLists.txt  package.xml
src/amr_localization/amr_localization/: kalman_filter.py  odometry_motion_model.py
src/amr_localization/config/: ekf.yaml
src/amr_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/amr_localization/rviz/: localization.rviz  odometry_motion_model.rviz
src/amr_localization/src/: kalman_filter.cpp  odometry_motion_model.cpp
src/amr_mapping/: CMakeLists.txt  package.xml
src/amr_mapping/config/: slam_toolbox.yaml
src/amr_mapping/include/amr_mapping/: mapping_with_known_poses.hpp
src/amr_mapping/launch/: slam.launch.py
src/amr_mapping/maps/office/: map.pgm  map.yaml
src/amr_mapping/rviz/: mapping.rviz
src/amr_mapping/src/: mapping_with_known_poses.cpp
src/amr_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/amr_motion/amr_motion/: pd_motion_planner.py  pure_pursuit.py
src/amr_motion/include/amr_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
src/amr_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/amr_navigation/: CMakeLists.txt  package.xml
src/amr_navigation/config/: controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/amr_navigation/launch/: navigation.launch.py
src/amr_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/amr_planning/amr_planning/: a_star_planner.py  dijkstra_planner.py
src/amr_planning/include/amr_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/amr_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
src/amr_simulation/: CMakeLists.txt  package.xml
src/amr_viz/: CMakeLists.txt  package.xml
